--- a/argocd-deployment.yaml
+++ b/argocd-deployment.yaml
@@ -126,6 +126,10 @@ spec:
         valueFiles:
         - $values/chart-values/wireguard-values.yaml
 
+    - repoURL: https://github.com/304442/infra
+      path: charts/wireguard-ui
+      targetRevision: HEAD
+
     - repoURL: https://geek-cookbook.github.io/charts/
       chart: error-pages
       targetRevision: 1.2.2
