--- a/argocd/llama-app.yaml
+++ b/argocd/llama-app.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: happy-computing
+  name: llama-app
   namespace: argocd
 spec:
   project: default
