--- a/traefik-ingress/happy-compute-ingress.yaml
+++ b/traefik-ingress/happy-compute-ingress.yaml
@@ -244,7 +244,7 @@ spec:
         path: /
         backend:
           service:
-            name: happy-computing-photoprism
+            name: photoprism
             port:
               number: 2342
 
