--- a/argocd/wirehole-app.yaml
+++ b/argocd/wirehole-app.yaml
@@ -50,5 +50,14 @@ spec:
         - $values/chart-values/wireguard-values.yaml
 
     - repoURL: https://github.com/304442/infra
+      path: charts/wireguard-ui
+      targetRevision: HEAD
+      helm:
+        releaseName: wireguard-ui
+        parameters:
+        - name: "fullnameOverride"
+          value: wireguard-ui
+
+    - repoURL: https://github.com/304442/infra
       targetRevision: HEAD
       ref: values
