--- a/traefik-ingress/happy-compute-ingress.yaml
+++ b/traefik-ingress/happy-compute-ingress.yaml
@@ -189,7 +189,7 @@ spec:
         path: /
         backend:
           service:
-            name: nodered
+            name: node-red
             port:
               number: 1880
 
