added argocd app

--- a/traefik-ingress/happy-compute-ingress.yaml
+++ b/traefik-ingress/happy-compute-ingress.yaml
@@ -233,7 +233,7 @@ spec:
         path: /
         backend:
           service:
-            name: happy-computing-vaultwarden
+            name: vaultwarden
             port:
               number: 8080
 
