--- a/traefik-ingress/happy-compute-ingress.yaml
+++ b/traefik-ingress/happy-compute-ingress.yaml
@@ -9,6 +9,7 @@ spec:
   ingressClassName: traefik
   tls:
    - hosts:
+       - prometheus.happycloudcomputing.com
        - wireguard.happycloudcomputing.com
        - liveide.happycloudcomputing.com
        - prodsk.happycloudcomputing.com
@@ -39,6 +40,16 @@ spec:
        - etherpad.happycloudcomputing.com 
      secretName: happy-tls-secret
   rules:
+  - host: prometheus.happycloudcomputing.com
+    http:
+      paths:
+      - pathType: Prefix
+        path: /
+        backend:
+          service:
+            name: prometheus-server
+            port: 80
+
   - host: wireguard.happycloudcomputing.com
     http:
       paths:
