--- a/traefik-ingress/happy-compute-ingress.yaml
+++ b/traefik-ingress/happy-compute-ingress.yaml
@@ -5,6 +5,7 @@ metadata:
   namespace: default
   annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+   traefik.ingress.kubernetes.io/error-pages: "error-pages@default"
 spec:
   ingressClassName: traefik
   tls:
