--- a/traefik-ingress/happy-compute-ingress.yaml
+++ b/traefik-ingress/happy-compute-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: default
   annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
-   traefik.ingress.kubernetes.io/router.middlewares: default-error-pages@kubernetescrd
+   traefik.ingress.kubernetes.io/router.middlewares: default-error-pages@kubernetescrd,default-secure-header@kubernetescrd
 spec:
   ingressClassName: traefik
   tls:
