--- a/middlewares/secure-header-middleware.yaml
+++ b/middlewares/secure-header-middleware.yaml
@@ -2,6 +2,7 @@ apiVersion: traefik.io/v1alpha1
 kind: Middleware
 metadata:
   name: secure-header
+  namespace: default
 spec:
   headers:
     frameDeny: true
