--- a/middlewares/rate-limit-middleware.yaml
+++ b/middlewares/rate-limit-middleware.yaml
@@ -1,7 +1,7 @@
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: test-ratelimit
+  name: rate-limit
   namespace: default
 spec:
   rateLimit:
