--- a/traefik-ingress/happy-compute-ingress.yaml
+++ b/traefik-ingress/happy-compute-ingress.yaml
@@ -7,8 +7,9 @@ metadata:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: |
      default-error-pages@kubernetescrd,
-     default-secure-header@kubernetescrd
-     default-rate-limit@kubernetescrd
+     default-secure-header@kubernetescrd,
+     default-rate-limit@kubernetescrd,
+     default-basic-auth@kubernetescrd
 spec:
   ingressClassName: traefik
   tls:
