--- a/middlewares/auth-middleware.yaml
+++ b/middlewares/auth-middleware.yaml
@@ -1,4 +1,4 @@
-apiVersion: traefik.io/v1alpha1
+apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
   name: basic-auth
@@ -15,5 +15,5 @@ metadata:
   namespace: default
 type: kubernetes.io/basic-auth
 data:
-  username: dXNlcg== # username: user
-  password: cGFzc3dvcmQ= # password: password
+  username: dXNlcjEwMQo= # username: user101
+  password: YWRtaW4xMjMK # password: admin123
